Set up the correct spacing for .cta (2 occasions) and .testimonials

--- a/style.css
+++ b/style.css
@@ -65,8 +65,11 @@ img {
   max-width: 70rem;
   margin: 0 auto;
 }
+
 .container--small {
   max-width: 40rem; /* 640px; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .split {
@@ -274,5 +277,12 @@ section {
   text-align: center;
 }
 .cta .section-title {
+  margin: 0 auto;
+}
+
+.testimonials {
+  text-align: center;
+}
+.testimonials .section-title {
   margin: 0 auto;
 }
